--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <!-- Add your site or application content here -->
         <p>Hello GitHub. Welcome to IS-117 class.</p>
+	<h1>HI EVERYONE</h1>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
