--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <!-- Add your site or application content here -->
         <p>Hello GitHub. Welcome to IS-117 class.</p>
 	<h1>HI EVERYONE</h1>
+	<h2>Welcome to IS117 </h2>
+	<h3>This is one of the best class </h3>
+	<h4>This class teaches a lot about web desinging.</h4>
+	<h5>Thanks to professor Williams, it seems very easy.</h5>
+	<h6>Thank you for visiting.</h6>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
