--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello GitHub. Welcome to IS-117 class.</p>
-	<h1>HI EVERYONE</h1>
+        <p>CRICKET | TENNIS | BASEBALL | SHOP NOW </p>
+	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
 	<h2>Welcome to IS117 </h2>
 	<h3>This is one of the best class </h3>
 	<h4>This class teaches a lot about web desinging.</h4>
