--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>CRICKET | TENNIS | BASEBALL | SHOP NOW </p>
+        <HEAD>CRICKET | TENNIS | BASEBALL | SHOW </HEAD>
 	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
 	<h2>Welcome to IS117 </h2>
 	<h3>This is one of the best class </h3>
