--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<h3>This is one of the best class </h3>
 	<h4>This class teaches a lot about web desinging.</h4>
 	<h5>Thanks to professor Williams, it seems very easy.</h5>
-	<h6>Thank you and have a very great day..</h6>
+	<h6>Thank you and have a very great day.</h6>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
