--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+	<div id="wrapper">
+	   <div id= "logo" class= "float_left">
+	     <img src = "img/Screen Shot 2015-11-05 at 1.29.09 AM.jpeg"/>
+	   </div>
+	  <div id = "Menu" class = "float_right">
+          <ul>
+	      <li><a href="index.html">CRICKET</a></li>
+	      <li><a href="about.html">TENNIS</a></li>
+	      <li><a href="index.html">BASEBALL</a></li>
+	      <li><a href="index.html">SHOW NOW</a></li>
+	  </ul>
+	</div>
         <HEAD>CRICKET | TENNIS | BASEBALL | SHOW </HEAD>
 	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
 	<h2>Welcome to IS117 </h2>
