--- a/index.html
+++ b/index.html
@@ -19,27 +19,19 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-	<div id="wrapper">
-	   <div id= "logo" class= "float_left">
-	     <img src = "img/Screen Shot 2015-11-05 at 1.29.09 AM.jpeg"/>
+        <!-- Add your site or application content here -->	<div id="wrapper">
+	   <div id= "logo" class="float_left">
+	     <img src = "img/Screen Shot 2015-11-05 at 1.29.09 AM.png"/>
 	   </div>
-	  <div id = "menu" class = "float_right">
-            <ul>
-	      <li><a href="index.html">CRICKET</a></li>
-	      <li><a href="about.html">TENNIS</a></li>
-	      <li><a href="index.html">BASEBALL</a></li>
-	      <li><a href="index.html">SHOW NOW</a></li>
-	    </ul>
-	   </div>
+	   <div id = "menu" class="float_right">
+              <ul>
+	        <li><a href="index.html">CRICKET</a></li>
+	        <li><a href="about.html">TENNIS</a></li>
+	        <li><a href="index.html">BASEBALL</a></li>
+	        <li><a href="index.html">SHOW NOW</a></li>
+	      </ul>
+	    </div>
 	</div>
-        <HEAD>CRICKET | TENNIS | BASEBALL | SHOW </HEAD>
-	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
-	<h2>Welcome to IS117 </h2>
-	<h3>This is one of the best class </h3>
-	<h4>This class teaches a lot about web desinging.</h4>
-	<h5>Thanks to professor Williams, it seems very easy.</h5>
-	<h6>Thank you</h6>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
