--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->	<div id="wrapper">
-	   <div id= "logo" class="float_left">
-	     <img src = "img/Screen Shot 2015-11-05 at 1.29.09 AM.png"/>
-	   </div>
-	   <div id = "menu" class="float_right">
-              <ul>
-	        <li><a href="index.html">CRICKET</a></li>
-	        <li><a href="about.html">TENNIS</a></li>
-	        <li><a href="index.html">BASEBALL</a></li>
-	        <li><a href="index.html">SHOW NOW</a></li>
-	      </ul>
-	    </div>
-	</div>
+	   <div id= "wrapper">
+	   <div id= "banner">
+	   	<h2>MSG</h2>
+		<h2>SPORTING GOODS</h2>
+	     </div>
+	     <input type= "button" value="CRICKET" style= "background-color:F0FFFF;
+	     color:white" id="ctal">
+	     </input>
+	     <div id= "header">
+	     <div id="heading1">
+	     	<h1>"Legend is created<br>not only by the talent,<br>but also by the passion<br>and
+		dedication."</h1>
+	     </div>
+
+	   
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
