--- a/index.html
+++ b/index.html
@@ -19,22 +19,14 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->	<div id="wrapper">
-	   <div id= "wrapper">
-	   <div id= "banner">
-	   	<h2>MSG</h2>
-		<h2>SPORTING GOODS</h2>
-	     </div>
-	     <input type= "button" value="CRICKET" style= "background-color:F0FFFF;
-	     color:white" id="ctal">
-	     </input>
-	     <div id= "header">
-	     <div id="heading1">
-	     	<h1>"Legend is created<br>not only by the talent,<br>but also by the passion<br>and
-		dedication."</h1>
-	     </div>
-
-	   
+        <!-- Add your site or application content here -->
+        <p>CRICKET | TENNIS | BASEBALL | SHOP NOW </p>
+	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
+	<h2>Welcome to IS117 </h2>
+	<h3>This is one of the best class </h3>
+	<h4>This class teaches a lot about web desinging.</h4>
+	<h5>Thanks to professor Williams, it seems very easy.</h5>
+	<h6>Thank you for visiting.</h6>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
