--- a/index.html
+++ b/index.html
@@ -20,13 +20,33 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>CRICKET | TENNIS | BASEBALL | SHOP NOW </p>
-	<h1>"Best quality at unbeatable prices, GUARANTEED!"</h1>
-	<h2>Welcome to IS117 </h2>
-	<h3>This is one of the best class </h3>
-	<h4>This class teaches a lot about web desinging.</h4>
-	<h5>Thanks to professor Williams, it seems very easy.</h5>
-	<h6>Thank you for visiting.</h6>
+	<div id="wrapper">
+        <div id="banner">
+	    <h2>MSG 
+	    <br>SPORTING GOODS</h2>
+        </div>
+	<input type="button" value="CRICKET" style="background-color:#B9121B;
+		color:white" id="cta1">
+        <input type="button" value="TENNIS" style="background-color:#B9121B;
+		color:white" id="cta1">
+	<input type="button" value="BASEBALL" style="background-color:#B9121B;
+		color:white" id="cta1">
+	</input>
+	<div id="content1">
+           <p>
+	   Legend is created
+           <br>not only by the talent,
+	   <br>but also by the passion
+	   <br>and dedication.</p>
+	</div>
+
+
+
+
+
+
+
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
