--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div id="banner">
 	    <h2>MSG 
 	    <br>SPORTING GOODS</h2>
-        </div><input type="button" value="CRICKET" style="background-color:#3333ff;
+        </div><input type="button" value="CRICKET" style="background-color:#ffffff;
 		color:blue" id="cta1">
-        <input type="button" value="TENNIS" style="background-color:#B9121B;
-		color:white" id="cta2">
-	<input type="button" value="BASEBALL" style="background-color:#ff9900;
+        <input type="button" value="TENNIS" style="background-color:#29a329;
+		color:white" id="cta1">
+	<input type="button" value="BASEBALL" style="background-color:#ffffff;
 		color:orange" id="cta1">
 	</input>
 	<div id="content1">
