--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         <!-- Add your site or application content here -->
 	<div id="wrapper">
         <div id="banner">
-	    <h2>MSG 
-	    <br>SPORTING GOODS</h2>
-        </div><input type="button" value="CRICKET" style="background-color:#ffffff;
+	    <h2>MASTERS 
+	    <br>SPORTS GOOD</h2>
+        </div>
+	<input type="button" value="CRICKET" style="background-color:#ffffff;
 		color:blue" id="cta1">
         <input type="button" value="TENNIS" style="background-color:#29a329;
 		color:white" id="cta1">
 	<input type="button" value="BASEBALL" style="background-color:#ffffff;
 		color:orange" id="cta1">
+        Right Text
 	</input>
 	<div id="content1">
            <p>
@@ -37,6 +39,7 @@
            <br>not only by the talent,
 	   <br>but also by the passion
 	   <br>and dedication.</p>
+        Right Text
 	</div>
 
 
