--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 	<input type="button" value="CRICKET" style="background-color:#ffffff;
 		color:blue" id="cta1">
         <input type="button" value="TENNIS" style="background-color:#29a329;
-		color:white" id="cta1">
+		color:white" id="cta2">
 	<input type="button" value="BASEBALL" style="background-color:#ffffff;
-		color:orange" id="cta1">
-        Right Text
+		color:orange" id="cta3">
 	</input>
 	<div id="content1">
            <p>
@@ -39,9 +38,17 @@
            <br>not only by the talent,
 	   <br>but also by the passion
 	   <br>and dedication.</p>
-        Right Text
 	</div>
-
+	<div id="tagline">
+	     <input type="checkbox" value="Best quality at unbeatable prices, GUARANTEED!";
+	     Style="background color:#989898;
+	     color:black" id="tag1">
+	</div>
+	<div id="CTA4">
+	      <input type="button" value="DOWNLOAD ON ANDROID"; Style="background
+	      color:#99FF99;
+	      color:white" id="ctaM">
+	</div>
 
 
 
