--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
 	   <br>and dedication.</p>
 	</div>
 	<div id="tagline">
-	     <input type="box" value="Best quality at unbeatable prices, GUARANTEED!";
+	     <input type="square" value="Best quality at unbeatable prices, GUARANTEED!";
 	     Style="background color:#989898;
 	     color:black" id="tag1">
 	     </input>
 	</div>
 	<div id="CTA4">
-	      <input type="button" value="DOWNLOAD ON ANDROID"; Style="background
-	      color:#99FF99;
+	<input type="button" value="DOWNLOAD ON ANDROID" style="background color:#33cc33;
 	      color:white" id="ctaM">
 	      </input>
 	</div>
