--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 	   <br>and dedication.</p>
 	</div>
 	<div id="tagline">
-	     <input type="square" value="Best quality at unbeatable prices, GUARANTEED!";
-	     Style="background color:#989898;
+	     <input type="button" value="Best quality at unbeatable prices, GUARANTEED!"
+	     style="background-color:#989898;
 	     color:black" id="tag1">
 	     </input>
 	</div>
 	<div id="CTA4">
-	<input type="button" value="DOWNLOAD ON ANDROID" style="background color:#33cc33;
+	<input type="button" value="DOWNLOAD ON ANDROID" style="background-color:#33cc33;
 	      color:white" id="ctaM">
 	      </input>
 	</div>
