--- a/index.html
+++ b/index.html
@@ -20,37 +20,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-	<div id="wrapper">
-        <div id="banner">
-	    <h2>MASTERS 
-	    <br>SPORTS GOOD</h2>
-        </div>
-	<input type="button" value="CRICKET" style="background-color:#ffffff;
-		color:blue" id="cta1">
-        <input type="button" value="TENNIS" style="background-color:#29a329;
-		color:white" id="cta2">
-	<input type="button" value="BASEBALL" style="background-color:#ffffff;
-		color:orange" id="cta3">
-	</input>
-	<div id="content1">
-           <p>
-	   Legend is created
-           <br>not only by the talent,
-	   <br>but also by the passion
-	   <br>and dedication.</p>
-	</div>
-	<div id="tagline">
-	     <input type="button" value="Best quality at unbeatable prices, GUARANTEED!"
-	     style="background-color:#989898;
-	     color:black" id="tag1">
-	     </input>
-	</div>
-	<div id="CTA4">
-	<input type="button" value="DOWNLOAD ON ANDROID" style="background-color:#33cc33;
-	      color:white" id="ctaM">
-	      </input>
-	</div>
-
+	<h1>Welcome to IS117 finals</h1>
+	<h2>My name is Meet Shah</h2>
+	<h3>This was the task in finals, #10 </h3>
 
 
 
